--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     width: 90%;
     margin: auto;
     text-align: center;
+    margin-top: 2.5em;
 }
 
 .row{
@@ -32,4 +33,8 @@
     height: 2em;
     background-color: red;
     border: 1px solid rgba(0, 0, 0, 0.8);
+}
+.r2{
+    display: grid;
+    grid-template-columns: auto auto;
 }
